# agentic-data-contracts

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
docs/specs/: 2026-03-27-scalable-semantic-discovery.md
docs/superpowers/plans/: 2026-03-26-agentic-data-contracts.md  2026-03-27-agentic-data-contracts-v2.md  2026-03-31-unified-rule-engine.md  2026-04-04-sql-normalizer-protocol.md  2026-04-11-relationship-checker.md  2026-04-13-domain-redesign.md  2026-04-17-tool-surface-consolidation.md  2026-04-24-principal-access-control.md  2026-06-07-mermaid-joinpath-eval.md
docs/superpowers/specs/: 2026-03-26-agentic-data-contracts-design.md  2026-03-27-agentic-data-contracts-v2-design.md  2026-03-30-prompt-renderer-design.md  2026-03-31-unified-rule-engine-design.md  2026-04-02-sql-normalizer-protocol-design.md  2026-04-11-relationship-checker-design.md  2026-04-13-domain-redesign-design.md  2026-04-17-tool-surface-consolidation-design.md  2026-04-24-principal-access-control-design.md  2026-06-07-mermaid-joinpath-eval-design.md
examples/growth_agent/: agent.py  contract.yml  semantic.yml  setup_db.py
examples/ops_agent/: agent.py  contract.yml  semantic.yml  setup_db.py
examples/revenue_agent/: agent.py  contract.yml  semantic.yml  setup_db.py
experiments/mermaid-joinpath-eval/: .gitignore  FINDINGS.md  README.md  pyproject.toml
experiments/mermaid-joinpath-eval/mje/: anonymize.py  data.py  grade.py  model_client.py  prompt.py  renderers.py  runner.py  schema_graph.py  stats.py
experiments/mermaid-joinpath-eval/tests/: test_anonymize.py  test_data.py  test_grade.py  test_model_client.py  test_prompt.py  test_renderers.py  test_runner.py  test_schema_graph.py  test_stats.py
experiments/mermaid-joinpath-eval/tests/fixtures/bird_mini/: dev.json
experiments/mermaid-joinpath-eval/tests/fixtures/spider_mini/: dev.json  tables.json
src/agentic_data_contracts/: __init__.py  ard.py
src/agentic_data_contracts/adapters/: __init__.py  _normalizer.py  base.py  duckdb.py
src/agentic_data_contracts/bridge/: compiler.py
src/agentic_data_contracts/core/: contract.py  principal.py  prompt.py  schema.py  session.py  staleness.py
src/agentic_data_contracts/semantic/: base.py  cube.py  dbt.py  yaml_source.py
src/agentic_data_contracts/tools/: factory.py  langchain.py  middleware.py  pydantic_ai.py  sdk.py
src/agentic_data_contracts/validation/: __init__.py  checkers.py  explain.py  validator.py
tests/: test_public_api.py
tests/fixtures/: filter_values_contract.yml  minimal_contract.yml  missing_source_contract.yml  principals_contract.yml  relationships_checker.yml  relationships_preferred.yml  roundtrip_contract.yml  sample_cube_schema.yml  sample_cube_schema_with_joins.yml  sample_dbt_manifest.json  sample_dbt_manifest_with_relationships.json  semantic_source.yml  valid_contract.yml
tests/test_adapters/: test_duckdb.py
tests/test_ard/: test_catalog_entry.py
tests/test_bridge/: test_compiler.py
tests/test_core/: test_contract.py  test_contract_allowlist_for.py  test_domain_model.py  test_freeze_fixes.py  test_load_semantic_source.py  test_principal_in_scope.py  test_principal_resolver.py  test_prompt_renderers.py  test_scalability.py  test_schema.py  test_schema_principals.py  test_sdk_config.py  test_session.py  test_staleness.py  test_system_prompt_metrics.py  test_wildcard_tables.py
tests/test_portability/: test_contract_round_trip.py
tests/test_semantic/: test_cube.py  test_dbt.py  test_domain_membership.py  test_metric_impacts.py  test_relationships.py  test_search.py  test_yaml_source.py
tests/test_tools/: test_auto_load.py  test_event_loop.py  test_factory.py  test_factory_principals.py  test_factory_principals_webex_scenario.py  test_fail_closed_semantic_source.py  test_inspect_query.py  test_langchain.py  test_metric_impacts_tools.py  test_middleware.py  test_pagination.py  test_pydantic_ai.py  test_relationship_tools.py  test_sdk.py  test_semantic_tools.py  test_wildcard_tools.py
tests/test_validation/: test_checkers.py  test_explain.py  test_relationship_checker.py  test_result_checks.py  test_sql_normalizer.py  test_table_allowlist_checker_principals.py  test_validator.py  test_validator_filter_values.py  test_validator_principals.py
