[project]
name = "agentic-data-contracts"
version = "0.2.3"
description = "YAML-first data contract governance for AI agents"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Qing", email = "qingye779@gmail.com" }]
license = { text = "MIT" }
keywords = [
    "ai-agents",
    "data-contracts",
    "data-governance",
    "sql-validation",
    "llm",
    "claude",
    "analytics",
    "dbt",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
]
dependencies = [
    "sqlglot>=23.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "thefuzz>=0.22.1",
]

[project.urls]
Homepage = "https://github.com/flyersworder/agentic-data-contracts"
Repository = "https://github.com/flyersworder/agentic-data-contracts"
Issues = "https://github.com/flyersworder/agentic-data-contracts/issues"
Documentation = "https://github.com/flyersworder/agentic-data-contracts/blob/main/docs/architecture.md"

[project.optional-dependencies]
agent-sdk = ["claude-agent-sdk>=0.1.52"]
agent-contracts = ["ai-agent-contracts>=0.2.0"]
bigquery = ["google-cloud-bigquery"]
snowflake = ["snowflake-connector-python"]
postgres = ["psycopg2-binary"]
duckdb = ["duckdb"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "ruff>=0.8.0",
    "duckdb",
]
all = [
    "agentic-data-contracts[agent-sdk,agent-contracts,bigquery,snowflake,postgres,duckdb]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_data_contracts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
unresolved-import = "ignore"
